--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -21,15 +21,20 @@
     <div class="col-md-12 col-lg-5  mb-3">
       <div class="galery h-100">
       <div id="carouselFade" class="carousel carousel-dark slide carousel-fade">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="{{product.image.url}}"class="d-block " alt="...">
+            <img src="{{product.image.url}}" class="d-block w-100 carousel-image" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="{{product.image.url}}"class="d-block" alt="...">
+            <img src="{{product.image.url}}" class="d-block w-100 carousel-image" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="{{product.image.url}}"class="d-block" alt="...">
+            <img src="{{product.image.url}}" class="d-block w-100 carousel-image" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselFade" data-bs-slide="prev">
@@ -94,4 +99,38 @@
     </div>
   </div>
 </div>
+
+<div class="modal-img">
+<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content">
+      <div class="modal-body">
+        <div class="modal-header">
+          <button type="button" class="btn-close btn-lg" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div id="modalCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img id="modalImage" class="d-block" src="{{ product.image.url }}" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block" src="" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block" src="{{ product.image.url }}" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#modalCarousel" data-bs-slide="prev">
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#modalCarousel" data-bs-slide="next">
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
 {%endblock%}
