--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -16,9 +16,12 @@
   <div class="row">
     <div class="col-12">
       <h1 class="section-title-checkout">Платіжні системи :</h1>
-      <div class="liqpay_checkout d-flex justify-content-center">{{ form_html|safe }}</div>
+      <form method="post" action="https://www.liqpay.ua/api/3/checkout/" accept-charset="utf-8">
+        <input type="hidden" name="data" value="{{ data }}" />
+        <input type="hidden" name="signature" value="{{ signature }}" />
+        <button type="submit" class="btn btn-success">LiqPay</button>
+      </form>
     </div>
-
-    {% endblock %}
   </div>
 </div>
+{% endblock %}
