--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -16,11 +16,7 @@
   <div class="row">
     <div class="col-12">
       <h1 class="section-title-checkout">Платіжні системи :</h1>
-      <form method="post" action="https://www.liqpay.ua/api/3/checkout/" accept-charset="utf-8">
-        <input type="hidden" name="data" value="{{ data }}" />
-        <input type="hidden" name="signature" value="{{ signature }}" />
-        <button type="submit" class="btn btn-success">LiqPay</button>
-      </form>
+      <div>{{form_html}}</div>
     </div>
   </div>
 </div>
