--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="col-12">
       <h1 class="section-title-checkout">Платіжні системи :</h1>
-      <div>{{form_html}}</div>
+      <div class="liqpay_checkout d-flex justify-content-center">{{form_html}}</div>
     </div>
   </div>
 </div>
