--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="col-12">
       <h1 class="section-title-checkout">Платіжні системи :</h1>
-      <div class="btn btn-success d-flex justify-content-center">LIQ PAY - {{form_html}}</div>
+      <div class="btn btn-success d-flex justify-content-center">LIQ PAY - {{ form_html|safe }}</div>
     </div>
   </div>
 </div>
