--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 <div class="container-fluid mb-3">
-  <div class="row">
+  <div class="row justify-content-center">
     <div class="col-12">
       <h1 class="section-title-checkout">Платіжні системи :</h1>
       <div class="btn btn-success d-inline-block text-center">LIQ PAY - {{ form_html|safe }}</div>
